[cli][model] Add model download

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires = [
     "scikit-image",
     "tensorflow",
     "matplotlib",
-    "click"
+    "click",
+    "progressbar",
 ]
 build-backend = "setuptools.build_meta"
 
