--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ dependencies = [
     "tensorflow",
     "matplotlib",
     "pandas",
-    "click"
+    "click",
+    "progressbar",
 ]
 
 [project.scripts]
