--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,6 +24,7 @@ jobs:
           python-version: '3.11'
 
       # ADJUST THIS: install all dependencies (including pdoc)
+      - run: python3 -m pip install --upgrade pip
       - run: python3 -m pip install pdoc pytest lark carla
       - run: python3 -m pip install -e .
       # ADJUST THIS: build your documentation into docs/.
